--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<input class="form-control" type="text" placeholder="Название книги" id="search-text"  onkeyup="findElem()" >
+<input class="form-control" type="text" placeholder="Поиск автора" id="search-text"  onkeyup="findElem()" >
 
 <div class="table">
     <div class="thead">
